// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxInput /> should render a checkbox input with a component as the label 1`] = `
<div
  className="checkbox-input checkboxInput"
>
  <Input
    isChecked={false}
    label={
      <FontAwesomeIcon
        type="star"
      />
    }
    name="test-input"
    type="checkbox"
  />
  <label
    className="checkbox-button"
    htmlFor="test-input"
  >
    <FontAwesomeIcon
      type="star"
    />
  </label>
</div>
`;

exports[`<CheckboxInput /> should render a checkbox input with a string label 1`] = `
<div
  className="checkbox-input checkboxInput"
>
  <Input
    isChecked={false}
    label="Hey I am a test string"
    name="test-input"
    type="checkbox"
  />
  <label
    className="checkbox-button"
    htmlFor="test-input"
  >
    Hey I am a test string
  </label>
</div>
`;
